# computer-graphics-practice

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js  tailwind.css
computer-graphics-from-scratch/: .gitignore  Cargo.toml
computer-graphics-from-scratch/src/: lib.rs  main.rs
computer_graphics_from_scratch/: Cargo.toml
computer_graphics_from_scratch/src/shaders/: basic_raytracing.wgsl
computer_graphics_from_scratch/src/webapp/: mod.rs
computer_graphics_from_scratch/src/webapp/components/: raytracing.rs  wgpu_canvas.rs
fundamentals-of-computer-graphics/: Cargo.toml
fundamentals-of-computer-graphics/src/: lib.rs  math.rs  raytracing.rs
fundamentals_of_computer_graphics/: Cargo.toml
fundamentals_of_computer_graphics/src/: math.rs
play-webgpu/: .gitignore  Cargo.toml  Dioxus.toml  package.json  pnpm-lock.yaml
play-webgpu/src/: lib.rs  main.rs
play-wgpu/: Cargo.toml
play-wgpu/assets/: main.css  tailwind.css
play-wgpu/src/: graphics.rs  lib.rs  main.rs
play_geometry/: Cargo.toml  Dioxus.toml
play_geometry/assets/: tailwind.css
play_geometry/src/: lib.rs  main.rs
play_geometry/src/shaders/: shader.wgsl
src/: app.rs  graphics.rs  lib.rs  main.rs  math.rs
src/components/: graphics.rs  mod.rs  rasterization.rs  raytracer.rs  raytracing.rs  section.rs  wgpu_canvas.rs
src/section/: mod.rs
src/section/basic_raytracing/: component.rs  graphics.rs  mod.rs
src/section/light/: component.rs  graphics.rs  mod.rs  shader.wgsl
src/section/prepare_environment/: component.rs  graphics.rs  mod.rs  shader.wgsl
src/section/shadows_and_reflections/: component.rs  shader.wgsl
src/shaders/: light.wgsl  shadows_and_reflections.wgsl
src/webapp/: app.rs  mod.rs
src/webapp/components/: rasterization.rs
