[workspace]
resolver = "3"
members = [
    "computer-graphics-from-scratch",
    "fundamentals-of-computer-graphics",
    "play-wgpu",
]

[workspace.dependencies]
wgpu = "25.0.2"
bytemuck = { version = "1.23.0", features = ["derive"] }


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
