[package]
name = "play_geometry"
version = "0.1.0"
authors = ["VR DEVIL <cnaicc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
web-sys = { version = "0.3.77", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
wgpu = { version = "25.0.2", features = ["webgpu"] }
log = "0.4.27"
wasm-logger = "0.2.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
fundamentals_of_computer_graphics = { version = "*", path = "../fundamentals_of_computer_graphics" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
